Fixed overflow problem on tablet

--- a/src/styles/pages/_livestream.scss
+++ b/src/styles/pages/_livestream.scss
@@ -9,7 +9,6 @@
         display: flex;
         align-items: center;
         justify-content: space-between;
-        width: 94vw;
         padding: 0 5vw 0 3vw;
         margin-top: 0.25vh;
     }
